--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body, html {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 100px 1vh;
+    border: 1px solid black;
 }
 
 .screen {
@@ -18,28 +19,36 @@ body, html {
 
 #results {
     float: right;
+    font-size: 30px;
+    padding-right: 50px;
+    padding-top: 40px;
 }
 
 .buttons-container {
+    padding-top: 8px;
     grid-column: 1;
     grid-row: 2;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: repeat(5, 100px);
-    
 }
 
 #ac {
     grid-column: 1 / 4;
     grid-row: 1;
     border: solid 1px black;
-
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 }
 
 #divide {
     grid-column: 4;
     grid-row: 1;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -47,6 +56,9 @@ body, html {
     grid-column: 1;
     grid-row: 2;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -54,6 +66,9 @@ body, html {
     grid-column: 2;
     grid-row: 2;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -61,6 +76,9 @@ body, html {
     grid-column: 3;
     grid-row: 2;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -68,6 +86,9 @@ body, html {
     grid-column: 4;
     grid-row: 2;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -75,6 +96,9 @@ body, html {
     grid-column: 1;
     grid-row: 3;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -82,6 +106,9 @@ body, html {
     grid-column: 2;
     grid-row: 3;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -89,6 +116,9 @@ body, html {
     grid-column: 3;
     grid-row: 3;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -96,6 +126,9 @@ body, html {
     grid-column: 4;
     grid-row: 3;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -103,6 +136,9 @@ body, html {
     grid-column: 1;
     grid-row: 4;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -110,6 +146,9 @@ body, html {
     grid-column: 2;
     grid-row: 4;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -117,6 +156,9 @@ body, html {
     grid-column: 3;
     grid-row: 4;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -124,6 +166,9 @@ body, html {
     grid-column: 4;
     grid-row: 4;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -131,6 +176,9 @@ body, html {
     grid-column: 1 / 3;
     grid-row: 5;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -138,6 +186,9 @@ body, html {
     grid-column: 3;
     grid-row: 5;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
 }
 
@@ -145,5 +196,13 @@ body, html {
     grid-column: 4;
     grid-row: 5;
     border: solid 1px black;
+    text-align: center;
+    padding-top: 45px;
+    font-size: 24px;
 
+}
+
+.click:active {
+    background-color: black;
+    color: white;
 }
