--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ body, html {
     grid-template-rows: repeat(5, 100px);
 }
 
+.buttons {
+    width: 100%;
+    height: 100%;
+}
+
 #ac {
     grid-column: 1 / 4;
     grid-row: 1;
@@ -202,7 +207,7 @@ body, html {
 
 }
 
-.click:active {
+.buttons:active {
     background-color: black;
     color: white;
 }
